# rizin

./: .git-blame-ignore-revs  .gitignore  BUILDING.md  CONTRIBUTING.md  DEVELOPERS.md  codecov.yml  meson.build  meson_options.txt
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: ci.yml  code-analysis.yml  coverity-scan.yml  labeler.yml  linter.yml  muon.yml  rzshell-treesitter-tests.yml  tcc.yml
binrz/man/: rizin.1  rz-bin.1  rz-find.1  rz-gg.1
binrz/rz-test/: run.c  rz-test.c  rz_test.h
doc/: PACKAGERS.md  fortunes.tips  rzshell.md
doc/examples/cross_builds/: meson-linux-s390x.ini
librz/: meson.build
librz/arch/: analysis.c  asm.c  asmutils.h  block.c  class.c  dwarf_process.c  fcn.c  function.c  meson.build  op.c  platform_profile.c  platform_target_index.c  reflines.c  rtti.c  swift_rtti.c  var.c
librz/arch/il/: analysis_il.c
librz/arch/p/: arch_mips_cs.c
librz/cons/: cons.c  dietline.c  grep.c  histogram.c
librz/core/: agraph.c  analysis_objc.c  canalysis.c  cannotated_code.c  casm.c  cbin.c  cconfig.c  ccrypto.c  cdebug.c  cesil.c  cfile.c  cgraph.c  chash.c  cil.c  cio.c  cmark.c  cmeta.c  cmp.c  core.c  core_private.h  csearch.c  csign.c  devirtualize_cxx.c  devirtualize_objc.c  disasm.c  fortune.c  golang.c  libs.c  linux_heap_glibc.c  linux_heap_jemalloc.c  meson.build  project_migrate.c  rop.c  rtr.c  windows_heap.c  yank.c
librz/core/cmd/: cmd.c  cmd_analysis.c  cmd_api.c  cmd_debug.c  cmd_eval.c  cmd_flag.c  cmd_help.c  cmd_info.c  cmd_magic.c  cmd_mark.c  cmd_math.c  cmd_open.c  cmd_print.c  cmd_remote.c  cmd_search.c  cmd_search_rop.c  cmd_seek.c  cmd_shell.c
librz/core/cmd_descs/: cmd_analysis.yaml  cmd_debug.yaml  cmd_descs.c  cmd_descs.h  cmd_descs.yaml  cmd_descs_generate.py  cmd_eval.yaml  cmd_flag.yaml  cmd_info.yaml  cmd_mark.yaml  cmd_math.yaml  cmd_open.yaml  cmd_plugins.yaml  cmd_print.yaml  cmd_remote.yaml  cmd_search.yaml  cmd_seek.yaml  meson.build
librz/core/tui/: panels.c  visual.c  vmenus.c
librz/crypto/: crypto.c
librz/crypto/p/: crypto_aes.c  crypto_blowfish.c  crypto_sm4_ecb.c
librz/debug/: bp.c  debug.c  meson.build
librz/debug/p/: debug_dmp.c  debug_native.c
librz/debug/p/native/: android_arm.c  android_arm64.c  android_x86_64.c  apple_aarch64.c  apple_arm.c  apple_ppc.c  apple_x86_64.c  dragonfly.c  kfbsd.c  linux_arm.c  linux_arm64.c  linux_mips32.c  linux_mips64.c  linux_ppc.c  netbsd.c  openbsd.c  reg.c  unsupported.c  windows.c
librz/debug/p/native/bsd/: bsd_debug.c  kfbsd_debug.c  netbsd_debug.c  openbsd_debug.c
librz/debug/p/native/linux/: linux_coredump.c  linux_coredump.h  linux_debug.c  linux_debug.h
librz/debug/p/native/reg/: dragonflybsd-x64.h  kfbsd-x64.h  netbsd-x64.h  openbsd-x64.h
librz/debug/p/native/windows/: windows_debug.h
librz/debug/p/native/xnu/: xnu_debug.c
librz/demangler/: demangler.c  meson.build
librz/egg/: egg.c  egg_Cfile.c  egg_lang.c  emit_arm.c  emit_trace.c  emit_x86.c
librz/flag/: flag.c
librz/hash/: hash.c  meson.build
librz/hash/p/: algo_crca.c  algo_fletcher.c  algo_temperature.c
librz/il/: il_export_json.c  il_export_string.c  il_reg.c  il_vm.c  theory_bitv.c  theory_fbasic.c
librz/il/definitions/: value.c
librz/include/: meson.build  rz_agraph.h  rz_analysis.h  rz_asm.h  rz_bin.h  rz_cmd.h  rz_cons.h  rz_core.h  rz_crypto.h  rz_debug.h  rz_demangler.h  rz_egg.h  rz_endian.h  rz_hash.h  rz_heap_glibc.h  rz_heap_jemalloc.h  rz_io.h  rz_lang.h  rz_list.h  rz_magic.h  rz_main.h  rz_mark.h  rz_pdb.h  rz_project.h  rz_rop.h  rz_search.h  rz_socket.h  rz_syscall.h  rz_th.h  rz_type.h  rz_types.h  rz_types_base.h  rz_userconf.h.in  rz_util.h  rz_vector.h
librz/include/rz_crypto/: rz_sm4.h
librz/include/rz_il/: rz_il_opbuilder_end.h  rz_il_opcodes.h
librz/include/rz_util/: ht_inc.h  rz_asn1.h  rz_assert.h  rz_bits.h  rz_buf.h  rz_file.h  rz_log.h  rz_mem.h  rz_path.h  rz_print.h  rz_regex.h  (+9 more)
librz/io/: io.c  io_desc.c  meson.build
librz/lang/: lang.c
librz/magic/: apprentice.c  file.c  file.h  funcs.c  magic-common.c  magic-dump.c  magic-load.c  magic-test.c  magic.c  magic.h  mdump.c  meson.build  softmagic.c  text.c  xmalloc.c  xmalloc.h
librz/main/: main.c  rizin.c  rz-asm.c  rz-ax.c  rz-bin.c  rz-diff.c  rz-find.c  rz-gg.c  rz-hash.c  rz-run.c  rz-sign.c
librz/mark/: mark.c
librz/reg/: reg.c
librz/search/: aes-find.c  bytes_search.c  collection.c  cryptographic_search.c  cryptographic_search_aes.c  cryptographic_search_pki.c  cryptographic_search_sm4.c  cryptographic_search_x509.c  entropy_search.c  hash_search.c  keyword.c  magic_search.c  meson.build  options.c  privkey-find.c  regexp.c  search.c  search_internal.h  string_search.c  value_search.c
librz/sign/: create.c  flirt.c
librz/socket/: run.c
librz/syscall/: syscall.c
librz/type/: format.c  function.c  type.c
librz/util/: asn1.c  asn1_oids.h  bits.c  bitvector.c  buf.c  file.c  hex.c  list.c  log.c  mem.c  meson.build  path.c  print.c  regex.c  str.c  str_search.c  strbuf.c  structured_data.c  structured_data_json.c  structured_data_yaml.c  subprocess.c  sys.c  table.c  thread_iterators.c  unicode.c  utf16.c  utf32.c  utf8.c  vector.c  version.c
subprojects/: capstone-next.wrap  capstone-v6.wrap  liblzma.wrap  libswift.wrap  libzip.wrap  pcre2.wrap  pcre2_cross_native.wrap
subprojects/rizin-shell-parser/: grammar.js
subprojects/rzwinkd/: iob_net.c  winkd.c
test/: README.md
test/integration/: meson.build  test_analysis_fcn.c  test_autocmplt.c  test_dwarf_integration.c  test_glibc_version.c  test_pdb.c  test_project_migrate.c  test_str_search.c
test/scripts/: alt_count.rz  map_clean.rz  search-consistency-test.rz  string-consistency-test.rz
test/unit/: meson.build  test_analysis_function.c  test_analysis_op.c  test_bits.c  test_bitvector.c  test_cmd.c  test_debug.c  test_encodings.c  test_endian.c  test_float.c  test_il_helpers.c  test_il_vm.c  test_io.c  test_list.c  test_mem.c  test_rop.c  test_sdb_sdb.c  test_serialize_analysis.c  test_str.c  test_str_search.c  test_table.c  test_threads.c  test_tokens.c  test_util.c  test_vector.c
(+306 files in other folders)
